--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "theme:activate": "node scripts/activate-theme.mjs"
   },
   "dependencies": {
     "@carbon/icons-react": "^11.70.0",
